Ported old Syntastic post

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:            Site Title
-description:      Describe your website here.
+title:            Diary of a madman
+description:      Music, Photography, Linux and Verilog.
 disqus_shortname: hpstrtheme
 reading_time:     true
 words_per_minute: 200
@@ -9,21 +9,21 @@ url:
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           Vladimir Oltean
   avatar:         avatar.jpg
   bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
-  email:          you@email.com
+  email:          olteanv@gmail.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
-  facebook:       
-  github:         
+  facebook:       olteanv
+  github:         vladimiroltean
   stackexchange:  
   linkedin:       
   instagram:      
-  flickr:         
+  flickr:         kcobain1992
   tumblr:         
   # google plus id, include the '+', eg +mmistakes
-  google_plus:    +yourid
+  google_plus:    +olteanv
 
 # Background image to be tiled on all pages
 background: 
@@ -35,7 +35,7 @@ google_verify:
 bing_verify:         
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    Europe/Bucharest
 future:      true
 highlighter: pygments
 markdown:    kramdown
